2004-08-19  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b17

	* Fix: Several small fixes.  Body text direction in poll_results,
	  CSS file location from subdirs (tools), No files/All files in setup,
	  stray binary char in setup, return to Gallery url in find_orphans,
	  recursive slideshow in albums with no photos (only albums)

	* Change:  Addition of Bharat's cache code - this is good, sooner rather
	  than later.

2004-08-19  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b16

	* Fix: Missing echo on gallery_error in save_photos from b14

	* Fix: Make doubly-sure that we're setting mambo session vars when
	  embedded, to prevent the 'No info' error.

2004-08-18  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b15

	* Fix: Added a setup option for "slowPhotoCount".  The accurate photo count
	  on the Gallery index page was a much requested change, however it proved to
	  be so slow on some machines/Galleries that this will disable it unless
	  explicitly enabled by the user during setup.  (Galleries with vast numbers
	  of albums or images could take as long as 30 seconds to load the index, by
	  user reports)

2004-08-17  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b14

	* Fix: Navigation bar width was dependant on whether images were resized or not...
	  this caused albums where resize_size was off to have the table width set to 0.

	* Fix: Extra-long filename prevention in save_photos.php, as well as verifying
	  that the uploaded file is a valid image format before saving to the temp
	  directory

2004-08-16  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.4-pl1-cvs-b13

	* Fixed a typo in classes/Album.php (missing ')')

2004-08-16  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b12

	* Fix: If 'shutterfly' is set, but not checked, unset it during the
	  album upgrade.  This caused shutterfly to appear even though it wasn't
	  really enabled.

	* Change: Add copyright to modules.php
