@@ -1,3 +1,9 @@
+2004-08-20  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b18
+
+	* Change: Extra error handling in Album::getHighlightTag
+	  Blind stab at the 'incomplete delete and resize forms' issue
+	  which appears to be failing inside getHighlightTag.
+
 2004-08-19  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b17
 
 	* Fix: Several small fixes.  Body text direction in poll_results,
